2008-02-07  Sven Herzberg  <sven@imendio.com>

	* autogen.sh: manually run gnome-doc-prepare (as the gnome-autogen.sh
	rule "^GNOME_DOC_INIT" doesn't apply anymore); if that fails, create
	an empty one (for Maemo)

2008-02-07  Sven Herzberg  <sven@imendio.com>

	* data/monkey-bubble.glade: dropped the unused GtkMenu for the "Help"
	menu items

2008-02-07  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): create the menu for "Help" with the
	GtkUIManager

2008-02-07  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new), (about), (show_help_content):
	changed signal handler prototypes to match the ones for the upcoming
	GtkAction* API (noone used the GtkMenuItem anyway)

2008-02-07  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): add a user interface to the
	GtkUIManager for the GNOME code

2008-02-07  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): provide the GtkActionGroup for the
	GNOME code, too

2008-02-07  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): provide the GtkUIManager for the
	GNOME code, too

2008-02-06  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (window_destroy_cb), (ui_main_new): added a
	callback for the destroy signal of the main window with the proper
	signature

2008-02-05  Sven Herzberg  <sven@imendio.com>

	Build the Maemo main menu with a GtkUIManager

	* src/ui/ui-main.c: (ui_main_new): added the required GtkActions into
	the actions group; added the proper UI to the GtkUIManager and get the
	popup menu from the ui manager

2008-02-05  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): dropped gtk_widget_show() for the
	main menu; gtk_menu_popup() will automatically show the widget

2008-02-05  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (game_new_cb), (game_join_cb), (game_pause_cb),
	(application_quit_cb), (ui_main_new): use extra callbacks for Maemo;